--- a/index.html
+++ b/index.html
@@ -6,11 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment 3</title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
     <h2>Assignment 3</h2>
     <div id="d3-div"></div>
     <div id="vega-div"></div>
-    <script type="module" src="./main.js"></script>
+    <html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>D3 World Map</title>
+    
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://d3js.org/topojson.v2.min.js"></script>
+</head>
+<body>
+<script type="text/javascript">
+const width = 900;
+const height = 600;
+const svg = d3.select("body").append("svg")
+    .attr("width", width)
+    .attr("height", height);
+ 
+const projection = d3.geoAlbersUsa()
+    .translate([width / 2, height / 2]) // translate to center of screen
+    .scale([1000]); // scale things down so see entire US
+ 
+const path = d3.geoPath().projection(projection);
+ 
+d3.json("https://gist.githubusercontent.com/Bradleykingz/3aa5206b6819a3c38b5d73cb814ed470/raw/a476b9098ba0244718b496697c5b350460d32f99/us-states.json", function(error, uState) {
+if (error) throw error;
+    svg.selectAll('path')
+        .data(uState.features)
+        .enter()
+        .append('path')
+        .attr("d", path)
+        .attr('class', 'state')
+});
+ 
+</script>
+</body>
+
   </body>
 </html>
