--- a/index.html
+++ b/index.html
@@ -1,22 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment 3</title>
-    <link rel="stylesheet" href="./style.css" />
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-  </head>
-  <body>
-    <h2>Assignment 3</h2>
-    <div id="d3-div"></div>
-    <div id="vega-div"></div>
-    <html lang="en">
 <head>
     <meta charset="utf-8">
     <title>D3 World Map</title>
-    
+    <link rel="stylesheet" href="style.css">
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://d3js.org/topojson.v2.min.js"></script>
 </head>
@@ -46,6 +33,4 @@ if (error) throw error;
  
 </script>
 </body>
-
-  </body>
 </html>
