added title, description and options

--- a/index.html
+++ b/index.html
@@ -8,28 +8,46 @@
     <script src="https://d3js.org/topojson.v2.min.js"></script>
 </head>
 <body>
-<script type="text/javascript">
-const width = 900;
-const height = 600;
-const svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height);
+    <h2>Who Becomes an Inventor?</h2>
+    <p>Origins of Inventors <br> Innovation Rates by Childhood CZ/State, Gender, and Parent Income</p>
+
+    <label for="pet-select">Gender</label><br>
+    <select name="gender" id="gender-select">
+        <option value="">--Please choose an option--</option>
+        <option value="all">All</option>
+        <option value="female">Female</option>
+        <option value="male">Male</option>
+    </select>
+    <br><br><br>
+    <div>
+        <p>Select Parent Income Quantile:</p>
+        <input type="range" min="1" max="100" value="50" class="slider" id="Range">
+    </div>
+    <br><br>
+
+
+    <script type="text/javascript">
+        const width = 900;
+        const height = 600;
+        const svg = d3.select("body").append("svg")
+            .attr("width", width)
+            .attr("height", height);
  
-const projection = d3.geoAlbersUsa()
-    .translate([width / 2, height / 2]) // translate to center of screen
-    .scale([1000]); // scale things down so see entire US
+        const projection = d3.geoAlbersUsa()
+            .translate([width / 2, height / 2]) // translate to center of screen
+            .scale([1000]); // scale things down so see entire US
  
-const path = d3.geoPath().projection(projection);
+        const path = d3.geoPath().projection(projection);
  
-d3.json("https://gist.githubusercontent.com/Bradleykingz/3aa5206b6819a3c38b5d73cb814ed470/raw/a476b9098ba0244718b496697c5b350460d32f99/us-states.json", function(error, uState) {
-if (error) throw error;
-    svg.selectAll('path')
-        .data(uState.features)
-        .enter()
-        .append('path')
-        .attr("d", path)
-        .attr('class', 'state')
-});
+        d3.json("https://gist.githubusercontent.com/Bradleykingz/3aa5206b6819a3c38b5d73cb814ed470/raw/a476b9098ba0244718b496697c5b350460d32f99/us-states.json", function(error, uState) {
+        if (error) throw error;
+            svg.selectAll('path')
+                .data(uState.features)
+                .enter()
+                .append('path')
+                .attr("d", path)
+                .attr('class', 'state')
+         });
  
 </script>
 </body>
