hover interactions added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/d3-color@3"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.1/tinycolor.js"></script>
+
     <script>
     const steelblue = d3.rgb("steelblue");
     </script>
@@ -30,5 +32,7 @@
     </div>
     <br><br>
     <script src="script.js"></script>
+
+    
 </body>
 </html>
