--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/d3-color@3"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.1/tinycolor.js"></script>
+    <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+
 
     <script>
     const steelblue = d3.rgb("steelblue");
@@ -31,7 +33,9 @@
         <input type="range" min="1" max="100" value="50" class="slider" id="Range">
     </div>
     <br><br>
+    <div id="vis"></div>
     <script src="script.js"></script>
+
 
     
 </body>
