--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/d3-color@3"></script>
+    <script src= "https://d3js.org/d3-color.v1.min.js"></script> 
+    <script src= "https://d3js.org/d3-interpolate.v1.min.js"></script> 
+    <script src= "https://d3js.org/d3-scale-chromatic.v1.min.js"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.1/tinycolor.js"></script>
     <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 
