--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 
 
+
     <script>
     const steelblue = d3.rgb("steelblue");
     </script>
@@ -26,9 +27,9 @@
     <label for="pet-select">Gender</label><br>
     <select name="gender" id="gender-select">
         <option value="">--Please choose an option--</option>
-        <option value="all">All</option>
-        <option value="female">Female</option>
-        <option value="male">Male</option>
+        <option value="inventor_percent">All</option>
+        <option value="inventor_percent_f">Female</option>
+        <option value="inventor_percent_m">Male</option>
     </select>
     <br><br><br>
     <div>
