--- a/index.html
+++ b/index.html
@@ -21,16 +21,23 @@
     <script src="https://d3js.org/topojson.v2.min.js"></script>
 </head>
 <body>
-    <h2>Who Becomes an Inventor?</h2>
-    <p>Origins of Inventors <br> Innovation Rates by Childhood CZ/State, Gender, and Parent Income</p>
-
-    <label for="select">Gender</label><br>
+    <h3>Who Becomes an Inventor?</h3>
+    <h4>Innovation Rates by Childhood State, Gender, and Parent Income</h4>
+    <h5>By Tammy Zhou and Priya Jain, Oct 2021</h5>
+    <p>The visualization shows patenting outcomes for children born in 1980-1984 by state in which they grew up, gender, and parent income.
+        A child is defined as an inventor if he or she is listed on a patent application between 2001 and 2012 or grant between 1996 and 2014, and as a highly-cited inventor if he or she is among the 5% of inventors with the most patent citations by 2014 within his birth cohort. 
+        Each child is assigned a state based on ZIP code from which his or her parents filed their 1040 tax return in the year the child was first claimed as a dependent.
+        Parents are assigned percentile ranks by ranking them based on their mean household income from 1996 to 2000 relative to other parents with children in the same birth cohort. Chetty et al. (2014, Online Data Table 8).  
+        <br>Data source: <a href="https://opportunityinsights.org/data/?geographic_level=0&topic=107&paper_id=0#resource-listing">Opportunity Insights</a></p>
+        
+    <br>
+    <label for="select">Gender</label> &nbsp
     <select name="gender" id="gender-select">
         <option value="all" selected>All</option>
         <option value="female">Female</option>
         <option value="male">Male</option>
     </select>
-    <br><br><br>
+    <!-- <br><br> -->
     <!-- <div>
         <p>Select Parent Income Quantile:</p>
         <input type="range" min="1" max="100" value="50" class="slider" id="Range">
