added state abbr to the map

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     </div> 
     <br><br> -->
     <div id="vis">
-        <span id = "title">&nbsp;</span>
-        <br>
+        <span id = "title">&nbsp;</span><br>
         <span id = "gender">&nbsp;</span>
+        <span id = "pieChart"></span>
     </div>
     <script src="script.js"></script>
     
