getting to the bar chart

--- a/index.html
+++ b/index.html
@@ -31,15 +31,10 @@
         <option value="male">Male</option>
     </select> -->
     <!-- <br><br> -->
-    <!-- <div>
-        <p>Select Parent Income Quantile:</p>
-        <input type="range" min="1" max="100" value="50" class="slider" id="Range">
-    </div> 
-    <br><br> -->
     <div id="vis">
         <span id = "title">&nbsp;</span><br>
         <span id = "gender">&nbsp;</span>
-        <span id = "pieChart"></span>
+        <div id = "pieChart"></div>
     </div>
     <script src="script.js"></script>
     
