clear the graph when mouse moves

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="vis">
         <span id = "title">&nbsp;</span><br>
         <span id = "gender">&nbsp;</span>
-        <div id = "pieChart"></div>
+        <div id = "chart"></div>
     </div>
     <script src="script.js"></script>
     
