--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <h3>Who Becomes an Inventor?</h3>
-    <h4>Innovation Rates by Childhood State, Gender, and Parent Income</h4>
+    <h4>Innovation Rates by Childhood State and Gender</h4>
     <h5>By Tammy Zhou and Priya Jain, Oct 2021</h5>
     <p>The visualization shows patenting outcomes for children born in 1980-1984 by state in which they grew up, gender, and parent income.
         A child is defined as an inventor if he or she is listed on a patent application between 2001 and 2012 or grant between 1996 and 2014, and as a highly-cited inventor if he or she is among the 5% of inventors with the most patent citations by 2014 within his birth cohort. 
