--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>The visualization shows patenting outcomes for children born in 1980-1984 by state in which they grew up, gender, and parent income.
         A child is defined as an inventor if he or she is listed on a patent application between 2001 and 2012 or grant between 1996 and 2014, and as a highly-cited inventor if he or she is among the 5% of inventors with the most patent citations by 2014 within his birth cohort. 
         Each child is assigned a state based on ZIP code from which his or her parents filed their 1040 tax return in the year the child was first claimed as a dependent.
-        Parents are assigned percentile ranks by ranking them based on their mean household income from 1996 to 2000 relative to other parents with children in the same birth cohort. Chetty et al. (2014, Online Data Table 8).  
+        (Innovation rates are calcualted by number of inventors / number of children born)
         <br>Data source: <a href="https://opportunityinsights.org/data/?geographic_level=0&topic=107&paper_id=0#resource-listing">Opportunity Insights</a></p>
         
     <br>
